data/Java/04-string-access-by-index/2/[M]Error.txt
*https://beginnersbook.com/2013/12/java-string-charat-method-example/
CharAtExample.java:14: error: array required, but String found
        char ch4 = str[20];
                      ^